--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/white.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="logo.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blue Dimsum</title>
 
 
     <!-- Facebook Pixel Code -->
-<script src="https://connect.facebook.net/signals/config/273287914633222?v=2.9.45&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '273287914633222');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=273287914633222&ev=PageView&noscript=1"
-/></noscript>
+
 <!-- End Facebook Pixel Code -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -143,9 +129,9 @@ margin-top: 5%;
 </div>-->
 
 <div class="logos">
-  <a href="https://food.grab.com/id/id/restaurant/kopi-anjis-cihapit-delivery/6-C2DXE6VUNT6UJ6" target="_blank"><img src="img/GRABFOOD.png" class="merchant"></a>
-  <a href="https://shopee.co.id/universal-link/now-food/shop/15036?deep_and_deferred=1&amp;share&amp;smtt=0.0.9" target="_blank"><img src="img/SHOPEEfood.png" class="merchant"></a>
-  <a href="https://gofood.link/a/BsQeBnw" target="_blank"><img src="img/GOFOOD.png" class="merchant"></a>
+  <a href="https://food.grab.com/id/id/restaurant/kopi-anjis-cihapit-delivery/6-C2DXE6VUNT6UJ6" target="_blank"><img src="GRABFOOD.png" class="merchant"></a>
+  <a href="https://shopee.co.id/universal-link/now-food/shop/15036?deep_and_deferred=1&amp;share&amp;smtt=0.0.9" target="_blank"><img src="SHOPEEfood.png" class="merchant"></a>
+  <a href="https://gofood.link/a/BsQeBnw" target="_blank"><img src="GOFOOD.png" class="merchant"></a>
 </div>
 
 
