--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blue Dimsum</title>
 
-
-    <!-- Facebook Pixel Code -->
-
+ <!-- Facebook Pixel Code -->
+<script src="https://connect.facebook.net/signals/config/273287914633222?v=2.9.47&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '273287914633222');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=273287914633222&ev=PageView&noscript=1"
+/></noscript>
 <!-- End Facebook Pixel Code -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -111,15 +124,15 @@ margin-top: 5%;
 
 
     <!-- Profile picture-->
-    <img src="img/white.png" alt="profile picture" class="profile-picture">
+    <img src="logo.png" alt="profile picture" class="profile-picture">
 
     <!-- Profile name-->
     <div class="profile-name">@blue_dimsum</div>
 
     <!-- Links-->
-        <a href="#" target="_blank" class="links">Lihat Menu DISINI</a>
-        <a href="https://www.google.com/maps/search/kopi+anjis/" target="_blank" class="links">Lokasi Kopi Anjis</a>
-        <a href="https://api.whatsapp.com/send/?phone=%2B6285721612647&amp;text=Saya+mau+order+minuman+kopi+anjis+sekarang%3F&amp;app_absent=0" target="_blank" class="links">Whatsapp Admin</a>
+        <a href="https://gofood.link/a/BxoJCL9" target="_blank" class="links">Order Go-Food</a>
+    <a href="https://www.tokopedia.com/tokoanjis" target="_blank" class="links">Tokopedia Instan Courier</a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B6285721612647&amp;text=Hallo%20Blue%20Dimsum,%20saya%20mau%20order%20dimsumnya%20!!" target="_blank" class="links">Whatsapp Admin</a>
 
 
 <br> <br>
@@ -131,7 +144,7 @@ margin-top: 5%;
 <div class="logos">
   <a href="https://food.grab.com/id/id/restaurant/kopi-anjis-cihapit-delivery/6-C2DXE6VUNT6UJ6" target="_blank"><img src="GRABFOOD.png" class="merchant"></a>
   <a href="https://shopee.co.id/universal-link/now-food/shop/15036?deep_and_deferred=1&amp;share&amp;smtt=0.0.9" target="_blank"><img src="SHOPEEfood.png" class="merchant"></a>
-  <a href="https://gofood.link/a/BsQeBnw" target="_blank"><img src="GOFOOD.png" class="merchant"></a>
+  <a href="https://gofood.link/a/BxoJCL9" target="_blank"><img src="GOFOOD.png" class="merchant"></a>
 </div>
 
 
