--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ margin-top: 5%;
     <!-- Links-->
         <a href="https://gofood.link/a/BxoJCL9" target="_blank" class="links">Order Go-Food</a>
     <a href="https://www.tokopedia.com/tokoanjis" target="_blank" class="links">Tokopedia Instan Courier</a>
-        <a href="https://api.whatsapp.com/send/?phone=%2B6285721612647&amp;text=Hallo%20Blue%20Dimsum,%20saya%20mau%20order%20dimsumnya%20!!" target="_blank" class="links">Jadi Reseller Blue Dimsum</a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B6285721612647&amp;text=Hallo%20Blue%20Dimsum,%20Minta%20indo%20Jadi%20Reseller%20dong." target="_blank" class="links">Mau jadi Reseller Blue Dimsum?</a>
 
 
 <br> <br>
